--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
-body{
-    background-color: #FFFFFF;
-}
+
+
 *{
   box-sizing: border-box;
 }
@@ -10,100 +9,46 @@ html, body{
   margin: 0;
 }
 
-h1{
-
-  font-size: 22pt;
-  color: olivedrab;
-  margin: 0;
-  text-align: center;
-}
-section p{
-  color:cadetblue;
-  font-family: 'Indie Flower', cursive;
-  text-align: center;
-
-}
-section h1{
-  font-family: 'VT323', monospace;
-  color: darkgray;
-
-}
-header{
-  background-color: #FFFFFF;
-  padding: 20px;
-
-}
-header p{
-  font-family: 'Indie Flower', cursive;
-  font-family: 'Abril Fatface', cursive;
-  color:cornflowerblue;
-  text-align: center;
-}
-header h1{
-  font-family: 'Shadows Into Light', cursive;
-}
-section{
- padding:20px;
-}
-.greenSection{
-  background-color: #FFFFFF;
+section#second-page {
+    padding: 0 0 3em;
+    background: #f8f8f8;
+    border: 1px solid #ccc;
+    margin: 2em 0;
+    display: grid;
+    grid-template-columns: 5% auto 5%;
 }
 
-footer{
-  background-color:#FFFFFF;
-  padding: 20px;
-
-}
-footer p {
-  color: hotpink;
-  text-align: center;
-  font-family: 'Orbitron', sans-serif;
+section#second-page h1 {
+    grid-column: 2/3;
+    margin: 1.5em 0 2em;
 }
 
+section#second-page div.info-container {
+    grid-column: 2/3;
+    width: 100%;
+}
 
-@supports (grid-area: auto) {
+section#second-page div.info-container ul {
+    width: 30%;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    margin: 1em;
+    padding: 1em;
+}
 
-  @media screen and (min-width: 600px) {
+section#second-page div.info-container li {
+    list-style: none;
+    margin: 1em;
+    word-spacing: 2px;
+}
 
-    body {
-      background-color: red;
-      display: grid;
-      grid-template-columns: 50% 50%;
-      grid-template-rows: repeat(6, 16.6%);
-      grid-template-areas: "header header" "GSec1 GSec1"  "footer footer";
-    }
+section#second-page div.info-icons {
+    grid-column: 2/3;
+    display: inline-block;
+    margin: 2em;
+}
 
-      header{
-        grid-area:header;
-
-      }
-
-      .GSec1{
-        grid-area: GSec1;
-
-      }
-
-
-
-      footer{
-        grid-area: footer;
-      }
-
-    }
-
-
-
-    @media screen and (min-width: 1000px){
-
-     body{
-       background-color: white;
-       grid-template-columns: 33.3% 33.3% 33.3%;
-       grid-template-areas:
-                          "header GSec1 footer"
-     }
-
-
-   }
-  }
-
-
+section#second-page div.info-icons img {
+    padding: 1em 3.5em;
+}
